[gd_scene load_steps=3 format=3 uid="uid://dktj30rkefkhh"]

[ext_resource type="Script" path="res://src/choice_edit.gd" id="1_2jptq"]
[ext_resource type="PackedScene" uid="uid://bgvfjindfxypf" path="res://src/facts.tscn" id="2_bcn4k"]

[node name="ChoiceEdit" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_2jptq")

[node name="Delete" type="Button" parent="."]
layout_mode = 2
text = "X"

[node name="FactsVisibilityToggle" type="CheckButton" parent="."]
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
text = "facts"

[node name="Facts" parent="." instance=ExtResource("2_bcn4k")]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_right = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PageSelect" type="SpinBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PageKeyLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 2

[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="FactsVisibilityToggle" to="." method="_on_facts_visibility_toggle_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/PageSelect" to="." method="_on_page_select_value_changed"]
